Update documentation for AI tools across various categories
- Expanded game development tools section with new AI tools and updated descriptions.
- Added a new section for learning resources in the getting started documentation.
- Updated free tools to try first with specific model versions and removed outdated entries.
- Enhanced general-purpose LLMs section with new models and detailed descriptions.
- Revised open-source LLMs section to include new models and their features.
- Expanded AI agents and automation tools with new frameworks and capabilities.
- Updated AI infrastructure and MLOps tools with new platforms and features.
- Enhanced NLP libraries and tools with additional resources and descriptions.
- Expanded no-code/low-code AI app builders with new platforms and features.
- Updated task and project management tools with new AI capabilities.
- Enhanced time management and scheduling tools with new features and integrations.
- Expanded educational AI tools with new platforms and detailed descriptions.
- Updated video creation and editing tools with new models and features.
- Removed package.json and package-lock.json as part of project restructuring.

--- a/.github/workflows/update-gitbook.yml
+++ b/.github/workflows/update-gitbook.yml
@@ -22,16 +22,8 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '22'
         cache: 'npm'
-
-    - name: Install dependencies
-      run: |
-        if [ -f package.json ]; then
-          npm install
-        else
-          npm install js-yaml markdown-it
-        fi
 
     - name: Run GitBook update script
       run: node .github/scripts/update-gitbook.js
@@ -39,8 +31,8 @@ jobs:
     - name: Commit and push changes
       if: github.event_name == 'push'
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.email "ammari.ali.0001@gmail.com"
+        git config --local user.name "aliammari1"
         git add docs/ SUMMARY.md
         if git diff --staged --quiet; then
           echo "No changes to commit"
